add field city to houses
